--- a/about.html
+++ b/about.html
@@ -111,10 +111,10 @@
                     </div>
                 </div>
                 <div class="lg:w-1/2 grid grid-cols-2 gap-4">
-                    <img src="https://picsum.photos/id/1076/600/400" alt="公司办公环境" class="rounded-lg shadow-md w-full h-48 object-cover transform hover:scale-105 transition-custom">
-                    <img src="https://picsum.photos/id/1077/600/400" alt="公司生产基地" class="rounded-lg shadow-md w-full h-48 object-cover mt-8 transform hover:scale-105 transition-custom">
-                    <img src="https://picsum.photos/id/1078/600/400" alt="公司产品展示" class="rounded-lg shadow-md w-full h-48 object-cover transform hover:scale-105 transition-custom">
-                    <img src="https://picsum.photos/id/1079/600/400" alt="公司团队" class="rounded-lg shadow-md w-full h-48 object-cover mt-8 transform hover:scale-105 transition-custom">
+                    <img src="images/安梦娜办公环境.png" alt="公司办公环境" class="rounded-lg shadow-md w-full h-48 object-cover transform hover:scale-105 transition-custom">
+                    <img src="images/生产基地.png" alt="公司生产基地" class="rounded-lg shadow-md w-full h-48 object-cover mt-8 transform hover:scale-105 transition-custom">
+                    <img src="images/安梦娜路边广告.png" alt="公司产品展示" class="rounded-lg shadow-md w-full h-48 object-cover transform hover:scale-105 transition-custom">
+                    <img src="images/社会责任和认可.png" alt="社会责任和认可" class="rounded-lg shadow-md w-full h-48 object-cover mt-8 transform hover:scale-105 transition-custom">
                 </div>
             </div>
         </div>
