--- a/about.html
+++ b/about.html
@@ -95,10 +95,10 @@
                             </div>
                         </div>
                         <div class="flex items-center">
-                            <div class="text-primary text-3xl font-bold mr-3">500+</div>
+                            <div class="text-primary text-3xl font-bold mr-3">40+</div>
                             <div class="text-gray-600">
-                                <div class="font-medium">员工数量</div>
-                                <div class="text-sm">专业团队</div>
+                                <div class="font-medium">专利数量</div>
+                                <div class="text-sm">专业研发团队</div>
                             </div>
                         </div>
                         <div class="flex items-center">
@@ -186,7 +186,7 @@
                     <div class="md:w-1/2 md:pl-12 text-left mb-8 md:mb-0">
                         <h3 class="text-xl font-bold mb-2">2015年</h3>
                         <p class="text-gray-600">
-                            推出箱包系列和智能设备系列，产品体系更加完善，开始拓展国际市场
+                            推出箱包系列和智能设备系列，产品体系更加完善
                         </p>
                     </div>
                 </div>
@@ -277,11 +277,11 @@
         <i class="fa fa-weixin"></i>
     </button>
     
-    <!-- 微博（直接链接） -->
-    <a href="https://weibo.com/yourcompany" 
+    <!-- QQ空间（直接链接） -->
+    <a href="https://user.qzone.qq.com/1198306188" 
        target="_blank" 
        class="text-gray-400 hover:text-white transition-custom">
-        <i class="fa fa-weibo"></i>
+        <i class="fa fa-qq"></i>
     </a>
     
     <!-- 淘宝店铺 -->
