--- a/contact.html
+++ b/contact.html
@@ -226,11 +226,11 @@
         <i class="fa fa-weixin"></i>
     </button>
     
-    <!-- 微博（直接链接） -->
-    <a href="https://weibo.com" 
+    <!-- QQ空间（直接链接） -->
+    <a href="https://user.qzone.qq.com/1198306188" 
        target="_blank" 
        class="text-gray-400 hover:text-white transition-custom">
-        <i class="fa fa-weibo"></i>
+        <i class="fa fa-qq"></i>
     </a>
     
     <!-- 淘宝店铺 -->
