--- a/products.html
+++ b/products.html
@@ -84,54 +84,106 @@
                 </p>
             </div>
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                <!-- 产品卡片1 -->
+                <!-- 产品卡片1 - 床上用品 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://picsum.photos/id/1060/400/300" alt="床上用品" class="w-full h-full object-cover transition-custom hover:scale-110">
+                        <img src="products/天丝四件套/大主图.jpg" alt="天丝四件套" class="w-full h-full object-cover transition-custom hover:scale-110">
                     </div>
                     <div class="p-4">
                         <h3 class="font-bold text-lg mb-2">床上用品</h3>
-                        <p class="text-gray-600 text-sm mb-4">高品质床品套件，舒适健康，给您优质睡眠体验</p>
+                        <p class="text-gray-600 text-sm mb-4">天丝四件套、床单、被套等高品质床品，舒适健康</p>
                         <a href="product-details.html#bedding-details" class="text-primary font-medium hover:underline flex items-center">
                             查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
                         </a>
                     </div>
                 </div>
-                <!-- 产品卡片2 -->
+                <!-- 产品卡片2 - 帐篷系列 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://picsum.photos/id/1059/400/300" alt="家居服饰" class="w-full h-full object-cover transition-custom hover:scale-110">
+                        <img src="products/帐篷围边/遮阳帐篷.png" alt="帐篷系列" class="w-full h-full object-cover transition-custom hover:scale-110">
                     </div>
                     <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">家居服饰</h3>
-                        <p class="text-gray-600 text-sm mb-4">舒适亲肤的家居服饰，让您在家也能享受时尚与舒适</p>
-                        <a href="product-details.html#clothing-details" class="text-primary font-medium hover:underline flex items-center">
+                        <h3 class="font-bold text-lg mb-2">帐篷系列</h3>
+                        <p class="text-gray-600 text-sm mb-4">救灾帐篷、遮阳帐篷等多种户外帐篷产品</p>
+                        <a href="product-details.html#tent-details" class="text-primary font-medium hover:underline flex items-center">
                             查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
                         </a>
                     </div>
                 </div>
-                <!-- 产品卡片3 -->
+                <!-- 产品卡片3 - 折叠床系列 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://picsum.photos/id/1062/400/300" alt="箱包系列" class="w-full h-full object-cover transition-custom hover:scale-110">
+                        <img src="products/折叠床图片11/折叠床展开.jpg" alt="折叠床系列" class="w-full h-full object-cover transition-custom hover:scale-110">
                     </div>
                     <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">箱包系列</h3>
-                        <p class="text-gray-600 text-sm mb-4">时尚实用的箱包产品，满足您的出行需求</p>
-                        <a href="product-details.html#bags-details" class="text-primary font-medium hover:underline flex items-center">
+                        <h3 class="font-bold text-lg mb-2">折叠床系列</h3>
+                        <p class="text-gray-600 text-sm mb-4">钢塑折叠床、木板折叠床、牛津布折叠床、海绵折叠床</p>
+                        <a href="product-details.html#foldable-bed-details" class="text-primary font-medium hover:underline flex items-center">
                             查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
                         </a>
                     </div>
                 </div>
-                <!-- 产品卡片4 -->
+                <!-- 产品卡片4 - 蚊帐系列 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://picsum.photos/id/1066/400/300" alt="智能设备" class="w-full h-full object-cover transition-custom hover:scale-110">
+                        <img src="products/圆顶蚊帐/大主图.jpg" alt="蚊帐系列" class="w-full h-full object-cover transition-custom hover:scale-110">
                     </div>
                     <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">智能设备</h3>
-                        <p class="text-gray-600 text-sm mb-4">智能家居设备，提升生活品质，享受科技便利</p>
-                        <a href="product-details.html#smart-devices-details" class="text-primary font-medium hover:underline flex items-center">
+                        <h3 class="font-bold text-lg mb-2">蚊帐系列</h3>
+                        <p class="text-gray-600 text-sm mb-4">圆顶蚊帐、方顶蚊帐等多种款式，防蚊透气</p>
+                        <a href="product-details.html#mosquito-net-details" class="text-primary font-medium hover:underline flex items-center">
+                            查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- 产品卡片5 - 救灾物资 -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
+                    <div class="h-48 overflow-hidden">
+                        <img src="products/救灾物资/军大衣.jpg" alt="救灾物资" class="w-full h-full object-cover transition-custom hover:scale-110">
+                    </div>
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">救灾物资</h3>
+                        <p class="text-gray-600 text-sm mb-4">防寒服、雨衣、保暖内衣、军大衣</p>
+                        <a href="product-details.html#relief-materials-details" class="text-primary font-medium hover:underline flex items-center">
+                            查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- 产品卡片6 - 军用被 -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
+                    <div class="h-48 overflow-hidden">
+                        <img src="products/军用被/棉被.png" alt="军用被" class="w-full h-full object-cover transition-custom hover:scale-110">
+                    </div>
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">军用被系列</h3>
+                        <p class="text-gray-600 text-sm mb-4">高品质棉被、毛毯等军用被产品</p>
+                        <a href="product-details.html#military-quilt-details" class="text-primary font-medium hover:underline flex items-center">
+                            查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- 产品卡片7 - 家居家具 -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
+                    <div class="h-48 overflow-hidden">
+                        <img src="products/安梦娜办公家具/A15.jpg" alt="家居家具" class="w-full h-full object-cover transition-custom hover:scale-110">
+                    </div>
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">家居家具</h3>
+                        <p class="text-gray-600 text-sm mb-4">办公家具、学校家具等多种家居家具产品</p>
+                        <a href="product-details.html#furniture-details" class="text-primary font-medium hover:underline flex items-center">
+                            查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- 产品卡片8 - 应急照明 -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
+                    <div class="h-48 overflow-hidden">
+                        <img src="products/应急灯/应急灯.png" alt="应急照明" class="w-full h-full object-cover transition-custom hover:scale-110">
+                    </div>
+                    <div class="p-4">
+                        <h3 class="font-bold text-lg mb-2">应急照明</h3>
+                        <p class="text-gray-600 text-sm mb-4">应急灯、手电筒等照明设备</p>
+                        <a href="product-details.html#emergency-lighting-details" class="text-primary font-medium hover:underline flex items-center">
                             查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
                         </a>
                     </div>
@@ -166,11 +218,11 @@
         <i class="fa fa-weixin"></i>
     </button>
     
-    <!-- 微博（直接链接） -->
-    <a href="https://weibo.com" 
+    <!-- QQ空间（直接链接） -->
+    <a href="https://user.qzone.qq.com/1198306188" 
        target="_blank" 
        class="text-gray-400 hover:text-white transition-custom">
-        <i class="fa fa-weibo"></i>
+        <i class="fa fa-qq"></i>
     </a>
     
     <!-- 淘宝店铺 -->
