--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="order-1 md:order-2 relative">
-                    <img src="images/安梦娜吊牌.png" alt="公司环境" class="rounded-lg shadow-xl w-full h-auto object-cover">
+                    <img src="images/安梦娜海报.png" alt="公司环境" class="rounded-lg shadow-xl w-full h-auto object-cover">
                     <div class="absolute -bottom-6 -left-6 bg-primary text-white p-4 rounded-lg shadow-lg hidden md:block">
                         <p class="text-3xl font-bold">27+</p>
                         <p class="text-sm">发展年限</p>
@@ -159,10 +159,10 @@
                 </p>
             </div>
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                <!-- 产品卡片1 -->
+                <!-- 产品卡片1 - 床上用品 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://picsum.photos/id/1060/400/300" alt="床上用品" class="w-full h-full object-cover transition-custom hover:scale-110">
+                        <img src="products/天丝四件套/大主图.jpg" alt="天丝四件套" class="w-full h-full object-cover transition-custom hover:scale-110">
                     </div>
                     <div class="p-4">
                         <h3 class="font-bold text-lg mb-2">床上用品</h3>
@@ -172,49 +172,49 @@
                         </a>
                     </div>
                 </div>
-                <!-- 产品卡片2 -->
+                <!-- 产品卡片2 - 帐篷系列 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://picsum.photos/id/1059/400/300" alt="家居服饰" class="w-full h-full object-cover transition-custom hover:scale-110">
+                        <img src="products/帐篷围边/遮阳帐篷.png" alt="帐篷系列" class="w-full h-full object-cover transition-custom hover:scale-110">
                     </div>
                     <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">家居服饰</h3>
-                        <p class="text-gray-600 text-sm mb-4">舒适亲肤的家居服饰，让您在家也能享受时尚与舒适</p>
-                        <a href="product-details.html" class="text-primary font-medium hover:underline flex items-center">
+                        <h3 class="font-bold text-lg mb-2">帐篷系列</h3>
+                        <p class="text-gray-600 text-sm mb-4">救灾帐篷、遮阳帐篷等多种户外帐篷产品</p>
+                        <a href="product-details.html#tent-details" class="text-primary font-medium hover:underline flex items-center">
                             查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
                         </a>
                     </div>
                 </div>
-                <!-- 产品卡片3 -->
+                <!-- 产品卡片3 - 折叠床系列 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://picsum.photos/id/1062/400/300" alt="箱包系列" class="w-full h-full object-cover transition-custom hover:scale-110">
+                        <img src="products/折叠床图片11/折叠床展开.jpg" alt="折叠床系列" class="w-full h-full object-cover transition-custom hover:scale-110">
                     </div>
                     <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">箱包系列</h3>
-                        <p class="text-gray-600 text-sm mb-4">时尚实用的箱包产品，满足您的出行需求</p>
-                        <a href="product-details.html" class="text-primary font-medium hover:underline flex items-center">
+                        <h3 class="font-bold text-lg mb-2">折叠床系列</h3>
+                        <p class="text-gray-600 text-sm mb-4">钢塑折叠床、木板折叠床、牛津布折叠床、海绵折叠床</p>
+                        <a href="product-details.html#foldable-bed-details" class="text-primary font-medium hover:underline flex items-center">
                             查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
                         </a>
                     </div>
                 </div>
-                <!-- 产品卡片4 -->
+                <!-- 产品卡片4 - 蚊帐系列 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-custom hover:shadow-xl transform hover:-translate-y-2">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://picsum.photos/id/1066/400/300" alt="智能设备" class="w-full h-full object-cover transition-custom hover:scale-110">
+                        <img src="products/圆顶蚊帐/大主图.jpg" alt="蚊帐系列" class="w-full h-full object-cover transition-custom hover:scale-110">
                     </div>
                     <div class="p-4">
-                        <h3 class="font-bold text-lg mb-2">智能设备</h3>
-                        <p class="text-gray-600 text-sm mb-4">智能家居设备，提升生活品质，享受科技便利</p>
-                        <a href="product-details.html" class="product-detail-link text-primary font-medium hover:underline flex items-center">
+                        <h3 class="font-bold text-lg mb-2">蚊帐系列</h3>
+                        <p class="text-gray-600 text-sm mb-4">圆顶蚊帐、方顶蚊帐等多种款式，防蚊透气</p>
+                        <a href="product-details.html#mosquito-net-details" class="text-primary font-medium hover:underline flex items-center">
                             查看详情 <i class="fa fa-arrow-right ml-2 text-xs"></i>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="text-center mt-12">
-                <a href="all-products.html" class="inline-block border-2 border-primary text-primary px-8 py-3 rounded-full font-bold hover:bg-primary hover:text-white transition-custom">
-                    查看全部产品
+                <a href="products.html" class="inline-block border-2 border-primary text-primary px-8 py-3 rounded-full font-bold hover:bg-primary hover:text-white transition-custom">
+                    查看更多产品
                 </a>
             </div>
         </div>
@@ -234,27 +234,16 @@
             <div id="bedding-details" class="detail-content hidden">
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div>
-                        <img src="https://picsum.photos/id/1060/800/600" alt="床上用品" class="rounded-lg shadow-lg w-full h-auto">
+                        <img src="products/天丝四件套/大主图.jpg" alt="床上用品" class="rounded-lg shadow-lg w-full h-auto">
                         <div class="grid grid-cols-4 gap-4 mt-4">
-                            <img src="https://picsum.photos/id/1060/200/150" alt="产品缩略图1" class="rounded cursor-pointer border-2 border-primary">
-                            <img src="https://picsum.photos/id/1059/200/150" alt="产品缩略图2" class="rounded cursor-pointer">
-                            <img src="https://picsum.photos/id/1062/200/150" alt="产品缩略图3" class="rounded cursor-pointer">
-                            <img src="https://picsum.photos/id/1063/200/150" alt="产品缩略图4" class="rounded cursor-pointer">
+                            <img src="products/天丝四件套/大主图.jpg" alt="产品缩略图1" class="rounded cursor-pointer border-2 border-primary">
+                            <img src="products/天丝床单/大主图.jpg" alt="产品缩略图2" class="rounded cursor-pointer">
+                            <img src="products/天丝被套/大主图.jpg" alt="产品缩略图3" class="rounded cursor-pointer">
+                            <img src="products/抗菌枕/大主图.jpg" alt="产品缩略图4" class="rounded cursor-pointer">
                         </div>
                     </div>
                     <div>
                         <h3 class="text-2xl font-bold mb-4 text-primary">高品质床上用品套件</h3>
-                        <div class="flex items-center mb-4">
-                            <div class="flex text-yellow-400">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star-half-o"></i>
-                            </div>
-                            <span class="ml-2 text-gray-600">(128条评价)</span>
-                        </div>
-                        <p class="text-2xl font-bold text-dark mb-6">¥399.00</p>
                         <p class="text-gray-700 mb-6 leading-relaxed">
                             我们的床上用品套件采用高品质纯棉面料，柔软亲肤，透气性好，给您带来舒适的睡眠体验。套件包括床单、被套和枕套，多种颜色和尺寸可供选择，满足不同家庭的需求。
                         </p>
@@ -310,27 +299,16 @@
             <div id="clothing-details" class="detail-content hidden">
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div>
-                        <img src="https://picsum.photos/id/1059/800/600" alt="家居服饰" class="rounded-lg shadow-lg w-full h-auto">
+                        <img src="products/救灾/男防寒服.jpg" alt="家居服饰" class="rounded-lg shadow-lg w-full h-auto">
                         <div class="grid grid-cols-4 gap-4 mt-4">
-                            <img src="https://picsum.photos/id/1059/200/150" alt="产品缩略图1" class="rounded cursor-pointer border-2 border-primary">
-                            <img src="https://picsum.photos/id/1060/200/150" alt="产品缩略图2" class="rounded cursor-pointer">
-                            <img src="https://picsum.photos/id/1061/200/150" alt="产品缩略图3" class="rounded cursor-pointer">
-                            <img src="https://picsum.photos/id/1062/200/150" alt="产品缩略图4" class="rounded cursor-pointer">
+                            <img src="products/救灾/男防寒服.jpg" alt="产品缩略图1" class="rounded cursor-pointer border-2 border-primary">
+                            <img src="products/救灾/女防寒服.jpg" alt="产品缩略图2" class="rounded cursor-pointer">
+                            <img src="products/雨衣/雨衣.png" alt="产品缩略图3" class="rounded cursor-pointer">
+                            <img src="products/部分广告/展示图.jpg" alt="产品缩略图4" class="rounded cursor-pointer">
                         </div>
                     </div>
                     <div>
                         <h3 class="text-2xl font-bold mb-4 text-primary">舒适家居服饰套装</h3>
-                        <div class="flex items-center mb-4">
-                            <div class="flex text-yellow-400">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <span class="ml-2 text-gray-600">(96条评价)</span>
-                        </div>
-                        <p class="text-2xl font-bold text-dark mb-6">¥199.00</p>
                         <p class="text-gray-700 mb-6 leading-relaxed">
                             我们的家居服饰套装采用优质面料，柔软亲肤，透气性好，让您在家也能享受舒适与时尚。套装包括上衣和裤子，多种颜色和尺码可供选择，满足不同人群的需求。
                         </p>
@@ -388,12 +366,12 @@
             <div id="bags-details" class="detail-content hidden">
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div>
-                        <img src="https://picsum.photos/id/1062/800/600" alt="箱包系列" class="rounded-lg shadow-lg w-full h-auto">
+                        <img src="products/拉杆箱/拉杆箱.jpg" alt="箱包系列" class="rounded-lg shadow-lg w-full h-auto">
                         <div class="grid grid-cols-4 gap-4 mt-4">
-                            <img src="https://picsum.photos/id/1062/200/150" alt="产品缩略图1" class="rounded cursor-pointer border-2 border-primary">
-                            <img src="https://picsum.photos/id/1063/200/150" alt="产品缩略图2" class="rounded cursor-pointer">
-                            <img src="https://picsum.photos/id/1064/200/150" alt="产品缩略图3" class="rounded cursor-pointer">
-                            <img src="https://picsum.photos/id/1065/200/150" alt="产品缩略图4" class="rounded cursor-pointer">
+                            <img src="products/拉杆箱/拉杆箱.jpg" alt="产品缩略图1" class="rounded cursor-pointer border-2 border-primary">
+                            <img src="products/编织袋图片/编织袋.jpg" alt="产品缩略图2" class="rounded cursor-pointer">
+                            <img src="products/安梦娜办公家具/A.jpg" alt="产品缩略图3" class="rounded cursor-pointer">
+                            <img src="products/安梦娜办公家具/b.jpg" alt="产品缩略图4" class="rounded cursor-pointer">
                         </div>
                     </div>
                     <div>
@@ -465,27 +443,16 @@
             <div id="smart-devices-details" class="detail-content hidden">
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div>
-                        <img src="https://picsum.photos/id/1066/800/600" alt="智能设备" class="rounded-lg shadow-lg w-full h-auto">
+                        <img src="products/应急灯/应急灯.png" alt="智能设备" class="rounded-lg shadow-lg w-full h-auto">
                         <div class="grid grid-cols-4 gap-4 mt-4">
-                            <img src="https://picsum.photos/id/1066/200/150" alt="产品缩略图1" class="rounded cursor-pointer border-2 border-primary">
-                            <img src="https://picsum.photos/id/1067/200/150" alt="产品缩略图2" class="rounded cursor-pointer">
-                            <img src="https://picsum.photos/id/1068/200/150" alt="产品缩略图3" class="rounded cursor-pointer">
-                            <img src="https://picsum.photos/id/1069/200/150" alt="产品缩略图4" class="rounded cursor-pointer">
+                            <img src="products/应急灯/应急灯.png" alt="产品缩略图1" class="rounded cursor-pointer border-2 border-primary">
+                            <img src="products/强光手电筒/强光手电筒.jpg" alt="产品缩略图2" class="rounded cursor-pointer">
+                            <img src="products/电动牙刷/电动牙刷.jpg" alt="产品缩略图3" class="rounded cursor-pointer">
+                            <img src="products/电动剃须刀/电动剃须刀.jpg" alt="产品缩略图4" class="rounded cursor-pointer">
                         </div>
                     </div>
                     <div>
                         <h3 class="text-2xl font-bold mb-4 text-primary">智能家居设备</h3>
-                        <div class="flex items-center mb-4">
-                            <div class="flex text-yellow-400">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star-half-o"></i>
-                            </div>
-                            <span class="ml-2 text-gray-600">(108条评价)</span>
-                        </div>
-                        <p class="text-2xl font-bold text-dark mb-6">¥599.00</p>
                         <p class="text-gray-700 mb-6 leading-relaxed">
                             我们的智能家居设备融合了最新的科技与时尚设计，能够提升您的生活品质，让您享受科技带来的便利。设备支持多种智能控制方式，操作简单方便。
                         </p>
@@ -805,13 +772,13 @@
                             </div>
                             <div>
                                 <h4 class="font-bold mb-1">网址</h4>
-                                <p class="text-gray-600">www.amna.cn</p>
+                                <p class="text-gray-600">www..cn</p>
                             </div>
                         </div>
                     </div>
                     <div class="flex space-x-4">
                         <button onclick="showWechatQR()" class="bg-primary text-white p-3 rounded-full hover:bg-primary/90 transition-custom"><i class="fa fa-weixin"></i></button>
-                        <a href="https://weibo.com" target="_blank" class="bg-primary text-white p-3 rounded-full hover:bg-primary/90 transition-custom"><i class="fa fa-weibo"></i></a>
+                        <a href="https://user.qzone.qq.com/1198306188" target="_blank" class="bg-primary text-white p-3 rounded-full hover:bg-primary/90 transition-custom"><i class="fa fa-qq"></i></a>
                         <a href="https://yourcompany.taobao.com" target="_blank" class="bg-primary text-white p-3 rounded-full hover:bg-primary/90 transition-custom"><i class="fa fa-shopping-cart"></i></a>
                     </div>
                 </div>
@@ -866,11 +833,11 @@
         <i class="fa fa-weixin"></i>
     </button>
     
-    <!-- 微博（直接链接） -->
-    <a href="https://weibo.com" 
+    <!-- QQ空间（直接链接） -->
+    <a href="https://user.qzone.qq.com/1198306188" 
        target="_blank" 
        class="text-gray-400 hover:text-white transition-custom">
-        <i class="fa fa-weibo"></i>
+        <i class="fa fa-qq"></i>
     </a>
     
     <!-- 淘宝店铺 -->
