--- a/all-products.html
+++ b/all-products.html
@@ -235,21 +235,21 @@
                     </div>
                     <div class="p-4">
                         <div class="flex justify-between items-start mb-2">
-                            <h3 class="font-bold text-lg">男防寒服</h3>
-                            <span class="text-primary font-bold">¥399</span>
+                            <h3 class="font-bold text-lg">救灾物资</h3>
+                            <!-- <span class="text-primary font-bold">¥399</span> -->
                         </div>
                         <div class="flex items-center mb-3">
-                            <div class="flex text-yellow-400">
+                           <!--  <div class="flex text-yellow-400">
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star-o"></i>
-                            </div>
-                            <span class="text-gray-500 text-sm ml-2">(56)</span>
+                            </div> -->
+                            <!-- <span class="text-gray-500 text-sm ml-2">(56)</span> -->
                         </div>
                         <p class="text-gray-600 text-sm mb-4 line-clamp-2">
-                            高品质防寒面料，保暖性好，适合救灾和户外
+                            防寒服、雨衣、保暖内衣、军大衣
                         </p>
                         <div class="flex justify-between items-center">
                             <a href="product-details.html#relief-materials-details" class="text-primary font-medium hover:underline">查看详情</a>
