--- a/product-details.html
+++ b/product-details.html
@@ -83,7 +83,7 @@
                         <div class="grid grid-cols-4 gap-4 mt-4">
                             <img src="products/帐篷围边/遮阳帐篷.png" alt="遮阳帐篷-主图" class="rounded cursor-pointer border-2 border-primary">
                             <img src="products/帐篷图片202204/救灾帐篷主图.jpg" alt="救灾帐篷" class="rounded cursor-pointer">
-                            <img src="products/帐篷图片202204/帐篷支架包.jpg" alt="帐篷围边-细节1" class="rounded cursor-pointer">
+                            <img src="products/帐篷图片202204/帐篷1122.jpg" alt="帐篷围边-细节1" class="rounded cursor-pointer">
                             <img src="products/帐篷图片202204/帐篷12.png" alt="帐篷围边-细节2" class="rounded cursor-pointer">
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                         <img src="products/折叠床图片11/折叠床展开.jpg" alt="钢木折叠床" class="rounded-lg shadow-lg w-full h-auto">
                         <div class="grid grid-cols-4 gap-4 mt-4">
                             <img src="products/折叠床图片11/折叠床展开.jpg" alt="钢木折叠床-展开" class="rounded cursor-pointer border-2 border-primary">
-                            <img src="products/省海绵折叠床/微信图片_20250905132814_121_299.jpg" alt="钢木折叠床-细节" class="rounded cursor-pointer">
+                            <img src="products/省海绵折叠床/广东省海绵折叠床.jpg" alt="钢木折叠床-细节" class="rounded cursor-pointer">
                             <img src="products/木板折叠床2024/木板折叠床.jpg" alt="钢木折叠床-侧面" class="rounded cursor-pointer">
                             <img src="products/钢塑折叠床/展开——承压.jpg" alt="钢塑折叠床" class="rounded cursor-pointer">
                         </div>
